[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/chars/titanawanna/slider_mimic.png" type="Texture" id=1]
[ext_resource path="res://scenes/chars/enemies/titanawanna.gd" type="Script" id=2]
[ext_resource path="res://scenes/user_interface/enemy_profile.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/drag.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 396, 464 )

[sub_resource type="CircleShape2D" id=7]
radius = 120.0

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 4.0
step = 0.5

[sub_resource type="Animation" id=6]
resource_name = "got_damaged"
length = 2.0

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 7.0
loop = true

[sub_resource type="CapsuleShape2D" id=8]
radius = 160.0
height = 608.0

[node name="Node2D" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 176.0 ],
"_edit_lock_": true
}

[node name="Body" type="Node2D" parent="."]
position = Vector2( 0, -400 )
__meta__ = {
"_edit_lock_": true
}

[node name="Attacker" type="Area2D" parent="Body"]
position = Vector2( 0, 120 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Attacker"]
position = Vector2( 4, 16 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" parent="." instance=ExtResource( 3 )]
margin_top = -712.0
margin_bottom = -712.0
__meta__ = {
"_edit_lock_": true
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 150.0
max_neighbors = 1

[node name="AttackCooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 5 )
anims/got_damaged = SubResource( 6 )
anims/walk = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -272 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -7.62939e-06, -280 )
scale = Vector2( 2.13573, 2.13573 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 17.558
autoplay = true

[connection signal="area_entered" from="Body/Attacker" to="." method="_on_Attacker_body_entered"]
[connection signal="area_exited" from="Body/Attacker" to="." method="_on_Attacker_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
